working on fun page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <link rel="stylesheet" type="text/css" href="content.css">
     <link rel="stylesheet" type="text/css" href="scrolleffect.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 
  <style type="text/css">
-
- 
 .dashboard {
   background-image: url("images/background.jpg");
   min-height: 100%;
@@ -33,7 +32,7 @@
         <li><a href="index.html#projects">Projects</a></li>
         <li><a href="index.html#education">Education</a></li>
         <li><a href="index.html#myteam">Team</a></li>
-        <li><a href="index.html#more">More</a></li>
+        <li><a href="home.html">More</a></li>
       </ul>
     </div>
   </nav>
@@ -319,9 +318,7 @@
     </div>
     <!-- more certification holder 3 -->
     <div class="projects-holder" id="morecert1">
-  
-      
-     <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
+      <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
        <h2>University of California, DAVIS</h2>
      <!--   <img src="images/hotel.png" width="100%"> -->
        <p>
@@ -332,6 +329,20 @@
         (iii) project monitoring and control <br>
         (iv) project termination<br>
         <a href="https://coursera.org/share/2b06d4187e4806c92b9e51b1c5287e05">View certificate</a>
+       </p>
+    </div>
+      
+     <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
+       <h2>University of California, Irvine</h2>
+     <!--   <img src="images/hotel.png" width="100%"> -->
+       <p>
+        <b>Interfacing w ith the Ardu ino</b><br>
+        Was abel to learn management tools, techniques and methodologies of addresses project management in the context of IT projects, including software projects. Using the framework of project life cycle, the course covers various aspects pertaining to <br>
+        (i) project initiation<br>
+        (ii) project planning and scheduling<br> 
+        (iii) project monitoring and control <br>
+        (iv) project termination<br>
+        <a href="https://coursera.org/share/cf5431f7febd61ae051d2112d1bdbdae">View certificate</a>
        </p>
     </div>
     <div class="project school-holder div-top-margin-pink js-scroll slide-right">
@@ -411,7 +422,7 @@
 
 
 
-<section class="scroll-container" id="more">
+<section class="scroll-container">
   <div class="scroll-element">
  <center><label class="large text-redish" >Events, Activities, Fun</label></center>
  <br>
@@ -494,6 +505,10 @@
   </div>
 
 </div>
+
+
+
+
  <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
  <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 <script type="text/javascript" src="scripts/my-web-dan.js"></script>
