update on the website

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 		background-size: cover;
 	}
   .block{
-    background: dodgerblue;
+   
     height: 300px;
     margin-bottom: 20px;
 
@@ -36,6 +36,28 @@
     position: relative;
     top: -42rem;
   }
+  .carddisplay{
+    margin: 5px;
+    border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
+  padding: 8px;
+  background: #fff;
+  }
+  .div-top-margin-pink{
+  
+   border-top: 3px solid crimson;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.div-top-margin-blue{
+   border-top: 3px solid #a6cfe3;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.text-redish{
+  color: #dc3545;;
+}
+
 </style>
 <body>
  <nav>
@@ -69,36 +91,20 @@
  <div class="container">
 
     <div class="row">
-     <div class="col-md-6"><div class="block" data-move-y="200px" data-move-x="-200px">
-     	<div class="image-container">
-    <h1 class="text-redish">Daniel Kipchirchir</h1>
-         <div>
-           <img src="images/profilephoto.png" width="100%" alt="my profile image">
-         </div>
-  </div>
-
+     <div class="col-md-12 project div-top-margin-pink" ><div class="block carddisplay div-top-margin-blue" data-rotate-y = "270deg" data-move-x="-150%">
+        <center><h1 class="text-redish">View through my fun page</h1></center>
+        <p>
+          Life is a beutifull thing, everyday is a chance to expand, relax and reflect of yesterday for the betterment of today and tommorow,<br>
+          Like the wave in the ocean change so do we change in quest to make ourselfs happy 
+        </p>
      </div></div>
-     <div class="col-md-6"><div class="block"data-move-y="200px" data-move-x="200px">
-     	
-     	<div class="journey-container">
-    <h1 class="text-redish">Journey</h1>
-    <p>
-      “I’ve been passionate about technology since I was able to type. Have always 
-      set my mind to new innovations and inventiosn of mankind on technology. 
-      I knew that pursuing technological oriented course was a must to suit my passion, 
-      since I could not resist the inner me pushing towards tech, 
-      I was able to join tech world and am currently studying at 
-      <strong>"KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY"</strong>
-    </p>
-  </div>
 
-     </div></div>
    </div>
 
    <div class="row">
-     <div class="col-md-4"><div class="block" data-move-x="-500px" data-rotate="90deg"></div></div>
-     <div class="col-md-4"><div class="block" data-move-x="-200px" data-rotate="45deg"></div></div>
-     <div class="col-md-4"><div class="block" data-move-x="500px" data-rotate="-90deg"></div></div>
+     <div class="col-md-4"><div class="block carddisplay div-top-margin-blue" data-move-x="-500px" data-rotate="90deg"></div></div>
+     <div class="col-md-4"><div class="block carddisplay div-top-margin-pink" data-move-x="-200px" data-rotate="45deg"></div></div>
+     <div class="col-md-4"><div class="block carddisplay div-top-margin-blue" data-move-x="500px" data-rotate="-90deg"></div></div>
    </div>
 
    <div class="row">
