--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </section>
 <section class="scroll-container">
   <div class="scroll-element">
-<center><label class="large text-redish">Android application</label></center>
+<center><label class="large text-redish">Desktop application</label></center>
  <div class="projects-holder">
   
       <div class="project div-top-margin-pink school-holder js-scroll slide-left">
@@ -198,7 +198,13 @@
       <h2>School management system</h2>
        <img src="images/school.png" width="100%" alt="project image">
        <p>
-         This desktop application is to aid in synchronizing the activities in one database.
+         This desktop application is to aid in synchronizing the activities mainly on the exam managemtn of the students and student information.<br>
+         <ol>
+           <li>Student information management</li>
+           <li>Student examination management</li>
+           <li>School information management</li>
+           <li>Grading,ranking and timetable</li>
+         </ol>
          <a href="https://github.com/danielkirwa/S-M-S-pri" target="_blank">visit</a>
        </p>
     </div>
@@ -214,7 +220,7 @@
   
       <div class="project school-holder div-top-margin-blue js-scroll slide-left">
        <h2>Converter app</h2>
-       <img src="images/elearning.jpg" width="100%" alt="project image">
+       <img src="images/convertor.jpg" width="100%" alt="project image">
        <p>
          This a appllication that aid in convertion units scientificaly.
          <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
@@ -222,20 +228,19 @@
     </div>
      <div class="project school-holder div-top-margin-yellow js-scroll fade-in-bottom">
        <h2>Poultry health manager</h2>
-       <img src="images/excellenttracking.jpg" width="100%" alt="project image">
+       <img src="images/dashguide.jpg" width="100%" alt="project image">
        <p>
-         This app provide clear  .
+         This app provide clear guide to the farmers on the poultry farm management in terms of : <br>
+           <ol>
+             <li>Feed fomulation </li>
+             <li>Vaccination </li>
+             <li>Disease </li>
+             <li>Record keeping </li>
+           </ol>
          <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
        </p>
     </div>
-    <div class="project school-holder div-top-margin-pink js-scroll slide-right">
-      <h2>Quiz App </h2>
-       <img src="images/trainticket.jpg" width="100%" alt="project image">
-       <p>
-         This a online based quiz application that lets you do exam online
-         <a href="https://github.com/danielkirwa/my-Train-Ticket-app" target="_blank">visit</a>
-       </p>
-    </div>
+    
     </div>
   </div>
 
@@ -359,13 +364,13 @@
     </div>
 
     </div>
- <button class="btnmorecert" id="morecert">See more certificates ...</button>
-    <!-- end of certification -->
+<!--  <button class="btnmorecert" id="morecert">See more certificates ...</button>
+ -->    <!-- end of certification -->
   </div>
 </section>
 
 
-<section class="scroll-container" id="myteam">
+<!-- <section class="scroll-container" id="myteam">
   <div class="scroll-element">
  <center><label class="large text-redish" >My team</label></center>
  <br>
@@ -418,7 +423,7 @@
 
   </div>
   
-</section>
+</section> -->
 
 
 
