Updated on project description

--- a/index.html
+++ b/index.html
@@ -89,17 +89,14 @@
     <h1 class="text-redish">Technology trands</h1>
      <table>
       <tr>
-        <td> <br><div class="piechartgit"><strong>Git and Github 70% 
-         Version control , for better code sharing and collaboration 
+        <td> <br><div class="piechartgit"><strong>Git and Github 70%  
         </strong> </div><br></td>
         <td><div class="piechartiot"><strong>Machine Learning 60%
            <br>
-            Ability to train and let the models learn for more accurrate performance
         </strong> </div></td>
       </tr>
        <tr >
         <td> <div class="piechartvue"><strong>Interet of Things 60% <br>
-          Ready for the word that i can control remotely
         </strong></div></td>
       </tr>
     </table>
@@ -149,7 +146,13 @@
        <h2>e-learning</h2>
        <img src="images/elearning.jpg" width="100%" alt="project image">
        <p>
-         This a online learning that I developed during the pandemic period to unsure that learning goes on despite the situation.
+         This a online learning that I developed during the pandemic period to unsure that learning goes on despite the situation.<br>
+         <ol>
+           <li>Registration</li>
+           <li>Exam/quiz module</li>
+           <li>Admin module</li>
+           <li>Schedule module</li>
+         </ol>
          <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
        </p>
     </div>
@@ -157,7 +160,12 @@
        <h2>Dayans tech solution</h2>
        <img src="images/dayanstech.png" width="100%" alt="project image">
        <p>
-         This website Dayans tech software company.
+         This website Dayans tech software company.<br>
+         <ol>
+           <li>Customer support</li>
+           <li>Company service</li>
+           <li>Company abouts</li>
+         </ol>
          <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
        </p>
     </div>
@@ -165,7 +173,14 @@
       <h2>Train ticketing</h2>
        <img src="images/trainticket.jpg" width="100%" alt="project image">
        <p>
-         This a online train ticketing app . this aims at making it easy to get your ticket online and also be able to track your favorite train
+         This a online train ticketing app . this aims at making it easy to get your ticket online and also be able to track your favorite train.
+         <br>
+         <ol>
+           <li>Ticket booking</li>
+           <li>Ticket sharing</li>
+           <li>Train tracking</li>
+           <li>Schedule change</li>
+         </ol>
          <a href="https://github.com/danielkirwa/my-Train-Ticket-app" target="_blank">visit</a>
        </p>
     </div>
@@ -182,7 +197,14 @@
        <h2>Student verdict</h2>
        <img src="images/studentverdict.jpg" width="100%" alt="project image">
        <p>
-         This is an automated conviction system that aid in passing judgement based on evidence provided.
+         This is an automated conviction system that aid in passing judgement based on evidence provided.This is university based system.
+         <br>
+         <ol>
+           <li>Authentication</li>
+           <li>Students data module</li>
+           <li>Vardict module</li>
+           <li>Admin module</li>
+         </ol>
          <a href="https://github.com/danielkirwa/Student-evidence-based-verdict" target="_blank">visit</a>
        </p>
     </div>
@@ -190,13 +212,21 @@
        <h2>Hotel manager</h2>
        <img src="images/hotel.png" width="100%" alt="project image">
        <p>
-         A hotel management system that is mainly design to smoothen the booking services eg rooms,wedding grounds 
+         A hotel management system that is mainly design to smoothen the booking services eg rooms,wedding grounds.
+         <br>
+         <ol>
+           <li>Authentication</li>
+           <li>Working desk</li>
+           <li>Pricing</li>
+           <li>Staff management</li>
+           <li>Booking</li>
+         </ol>
          <a href="https://github.com/danielkirwa/HotelMagementDektopApp" target="_blank">visit</a>
        </p>
     </div>
     <div class="project div-top-margin-blue school-holder js-scroll slide-right">
       <h2>School management system</h2>
-       <img src="images/school.png" width="100%" alt="project image">
+       <img src="images/school2.png" width="100%" alt="project image">
        <p>
          This desktop application is to aid in synchronizing the activities mainly on the exam managemtn of the students and student information.<br>
          <ol>
@@ -222,7 +252,11 @@
        <h2>Converter app</h2>
        <img src="images/convertor.jpg" width="100%" alt="project image">
        <p>
-         This a appllication that aid in convertion units scientificaly.
+         This a appllication that aid in convertion units scientificaly.<br>
+         <ol>
+           <li>Basic calculator module</li>
+           <li>Convertion module</li>
+         </ol>
          <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
        </p>
     </div>
