Updated on project description

--- a/index.html
+++ b/index.html
@@ -299,8 +299,17 @@
        <p>
         <b>Secondary school level (Period 2013 -2017)</b><br>
         Join Paul boit and managed to study the following subjects. This after my successfully completing my 
-        primary education. 
-        (Maths, English, Kiswahili, Chemistry, Physics, Biology, Geography and Christian Religion Education)
+        primary education. <br>
+        <ol>
+          <li>Maths</li>
+          <li>English</li>
+          <li>Kiswahili</li>
+          <li>Chemistry</li>
+          <li>Physics</li>
+          <li>Biology</li>
+          <li>Geography</li>
+          <li>Christian Religion Education</li>
+        </ol>
        </p>
     </div>
     <div class="project div-top-margin-blue school-holder js-scroll slide-right">
@@ -310,7 +319,14 @@
          <b>Primary school level (Period 2002 - 2012)</b>
          Jion Moi barracks at my younger age ang managed to pursuie the following subjects. The very first 
          education level.
-         (Maths ,English,Kiswahili, Science, Social Studies & Christian Religion Education)
+         <ol>
+          <li>Maths</li>
+          <li>English</li>
+          <li>Kiswahili</li>
+          <li>Science</li>
+          <li>Social Studies & Christian Religion Education</li>
+        </ol>
+         
        </p>
     </div>
     </div>
