--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="index.html#projects">Projects</a></li>
         <li><a href="index.html#education">Education</a></li>
         <li><a href="index.html#myteam">Team</a></li>
-        <li><a href="home.html">More</a></li>
+        <li><a href="fun.html">More</a></li>
       </ul>
     </div>
   </nav>
