--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   background-image: url("images/background.jpg");
   min-height: 100%;
 }
+.reflection{
+  -webkit-box-reflect: below 0px linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.2));
+}
 
  </style>
 </head>
@@ -195,7 +198,7 @@
   
       <div class="project div-top-margin-pink school-holder js-scroll slide-left">
        <h2>Student verdict</h2>
-       <img src="images/studentverdict.jpg" width="100%" alt="project image">
+       <img src="images/studentverdict.jpg" width="100%" alt="project image" class="reflection">
        <p>
          This is an automated conviction system that aid in passing judgement based on evidence provided.This is university based system.
          <br>
@@ -210,7 +213,7 @@
     </div>
      <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
        <h2>Hotel manager</h2>
-       <img src="images/hotel.png" width="100%" alt="project image">
+       <img src="images/hotel.png" width="100%" alt="project image" class="reflection">
        <p>
          A hotel management system that is mainly design to smoothen the booking services eg rooms,wedding grounds.
          <br>
@@ -226,7 +229,7 @@
     </div>
     <div class="project div-top-margin-blue school-holder js-scroll slide-right">
       <h2>School management system</h2>
-       <img src="images/school2.png" width="100%" alt="project image">
+       <img src="images/school2.png" width="100%" alt="project image" class="reflection">
        <p>
          This desktop application is to aid in synchronizing the activities mainly on the exam managemtn of the students and student information.<br>
          <ol>
