website update yet to change design

--- a/fun.html
+++ b/fun.html
@@ -34,18 +34,25 @@ body{
   font-size: 20px;
   letter-spacing: 2px;
 }
+.fun-holder{
+    width: 80%;
+    margin-left: 10%;
+}
+.fun-item{
+  display: flex;
+}
+.fun-item-left{
+    width: 50%;
+}
+.fun-item-right{
+    width: 50%;
+}
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet"> 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" type="text/css" href="skills.css">
@@ -85,6 +92,22 @@ body{
 
 <label class="TEST">yet to fisnish</label>
 <label class="TESTWE">Yet to finish</label>
+<div class="fun-holder">
+  <div class="fun-item">
+    <div class="fun-item-left">
+       <img src="images/forthyearclosing.jpg">
+    </div>
+    <div class="fun-item-right">
+       <p class="TESTWE">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+   
+</div>
 
 
 
