--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
        <h2>e-learning</h2>
        <img src="images/elearning.jpg" width="100%" alt="project image">
        <p>
-         This a online learning that I developed during the pandemic period to unsure that learning goes on despite the situation.<br>
+         An online learning that I developed during the pandemic period to unsure that learning goes on despite the situation.<br>
          <ol>
            <li>Registration</li>
            <li>Exam/quiz module</li>
@@ -159,11 +159,25 @@
          <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
        </p>
     </div>
+    <div class="project school-holder div-top-margin-blue js-scroll slide-left">
+       <h2>County specific Crime Alert</h2>
+       <img src="images/crimeloger.png" width="100%" alt="project image">
+       <p>
+         An online based application that provide alerts to the residence about the security status of the county based on the already exiting data. The platform also provide advisory report approved by admin to the residence<br>
+         <ol>
+           <li>Registration</li>
+           <li>Crime analysis</li>
+           <li>Crime reporting</li>
+           <li>Alert module</li>
+         </ol>
+         <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
+       </p>
+    </div>
      <div class="project school-holder div-top-margin-yellow js-scroll fade-in-bottom">
        <h2>Dayans tech solution</h2>
        <img src="images/dayanstech.png" width="100%" alt="project image">
        <p>
-         This website Dayans tech software company.<br>
+         One of the way of marketing your business is to have your own website which is a parmanent advertisment of your brand with the following.<br>
          <ol>
            <li>Customer support</li>
            <li>Company service</li>
@@ -172,7 +186,7 @@
          <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
        </p>
     </div>
-    <div class="project school-holder div-top-margin-pink js-scroll slide-right">
+    <!-- <div class="project school-holder div-top-margin-pink js-scroll slide-right">
       <h2>Train ticketing</h2>
        <img src="images/trainticket.jpg" width="100%" alt="project image">
        <p>
@@ -186,7 +200,7 @@
          </ol>
          <a href="https://github.com/danielkirwa/my-Train-Ticket-app" target="_blank">visit</a>
        </p>
-    </div>
+    </div> -->
     </div>
   </div>
 
