Updated on the certification details yet to add more button

--- a/index.html
+++ b/index.html
@@ -358,6 +358,12 @@
        <p>
          <b>Introduction to Git and GitHub (Version Control System)</b><br>
          I learn how to keep track of the different versions of my code and configuration files using the popular version control system (VCS) called Git. I was able to setup an account with a service called GitHub so that I can create my own remote repositories to store my code and configuration.<br>
+         <ol>
+           <li>File tracking</li>
+           <li>Commit, push and pull</li>
+           <li>Branching and merging</li>
+           <li>Rebase</li>
+         </ol>
          <a href="https://coursera.org/share/74f5719ced1a022423ad28539d5c1f67">View certificate</a>
        </p>
     </div>
@@ -379,10 +385,11 @@
       <!--  <img src="images/school.png" width="100%"> -->
        <p>
          <b>Windows Server Management and Security</b>
-        Item covered <br>
+        Was able to learn more on server environment, Installation of the windows server Configuration of the server. Best server practice and mantainace. Different types of the windows server and also requirement for any type of server <br>
          (i) Windows Server installation <br>
-         (i) Configuring users<br>
+         (ii) Configuring users<br>
          (iii) Hardening the server operating system <br>
+         (iv) Server requirements <br>
          <a href="https://coursera.org/share/543382f307cbc14d7f97e5e7b1663bb4">View certificate</a>
        </p>
     </div>
@@ -395,12 +402,12 @@
      <!--   <img src="images/hotel.png" width="100%"> -->
        <p>
         <b>Introduction to Web Development</b><br>
-        Was abel to learn management tools, techniques and methodologies of addresses project management in the context of IT projects, including software projects. Using the framework of project life cycle, the course covers various aspects pertaining to <br>
-        (i) project initiation<br>
-        (ii) project planning and scheduling<br> 
-        (iii) project monitoring and control <br>
-        (iv) project termination<br>
-        <a href="https://coursera.org/share/2b06d4187e4806c92b9e51b1c5287e05">View certificate</a>
+        Was able to describe the structure and functionality of the world wide web, create dynamic web pages using a combination of HTML, CSS, and JavaScript, apply essential programming language concepts when creating HTML forms, select an appropriate web hosting service, and publish your webpages for the world to see<br>
+        (i) HTML<br>
+        (ii) Javascript<br> 
+        (iii) Css <br>
+        (iv) Hosting<br>
+        <a href="https://coursera.org/share/a219176d97d2f60bfdadfaa0d63a38f0">View certificate</a>
        </p>
     </div>
       
@@ -408,12 +415,12 @@
        <h2>University of California, Irvine</h2>
      <!--   <img src="images/hotel.png" width="100%"> -->
        <p>
-        <b>Interfacing w ith the Ardu ino</b><br>
-        Was abel to learn management tools, techniques and methodologies of addresses project management in the context of IT projects, including software projects. Using the framework of project life cycle, the course covers various aspects pertaining to <br>
-        (i) project initiation<br>
-        (ii) project planning and scheduling<br> 
-        (iii) project monitoring and control <br>
-        (iv) project termination<br>
+        <b>Interfacing w ith the Arduino</b><br>
+        Was able to learn basics of hardware design and wiring needed to build useful circuits. Also describes the functions of basic passive components and describes how to use them in simple circuits. This module also describes how to wire circuits together using a breadboard. Was design and implement the circuits they need to interact with basic sensors and actuators <br>
+        (i) Electrical circuits and properties<br>
+        (ii) Switches, Potentiometers<br> 
+        (iii) Building circuits<br>
+        
         <a href="https://coursera.org/share/cf5431f7febd61ae051d2112d1bdbdae">View certificate</a>
        </p>
     </div>
@@ -422,11 +429,11 @@
       <!--  <img src="images/school.png" width="100%"> -->
        <p>
          <b>IT Infrastructure and Emerging Trends</b><br>
-        Item covered <br>
-         (i) Windows Server installation <br>
-         (i) Configuring users<br>
-         (iii) Hardening the server operating system <br>
-         <a href="https://coursera.org/share/543382f307cbc14d7f97e5e7b1663bb4">View certificate</a>
+        Was able to explore the innovation that emerging technologies like Blockchains can bring about. <br>
+         (i) Learn about issues in cloud computing and various realizations of service-oriented computing.  <br>
+         (ii) Become aware of cyber security threats that organizations need to be aware of and learn about various defense mechanisms.<br>
+         (iii) Discover the range of mobile technologies available to modern enterprises and how these can be used to create innovative business models. <br>
+         <a href="https://coursera.org/share/943196aa245452ce3e549265ade01799">View certificate</a>
        </p>
     </div>
 
