Test design working

--- a/index.html
+++ b/index.html
@@ -129,24 +129,21 @@
              <label class="bg-level">Beginner</label>
            </div>
            <div class="level-holder">
-            &nbsp;
+            
             <center><div class="my-bullet-av"></div></center>
-             <label class="av-level">Average</label>
+             <label class="av-level">&nbsp;&nbsp;Average</label>
            </div>
            <div class="level-holder">
-            &nbsp;
             <center><div class="my-bullet-sk"></div></center>
-             <label class="sk-level">Skilled</label>
+             <label class="sk-level">&nbsp;&nbsp;Skilled</label>
            </div>
            <div class="level-holder">
-            &nbsp;
             <center><div class="my-bullet-sp"></div></center>
-             <label class="sp-level">Specialist</label>
+             <label class="sp-level">&nbsp;&nbsp;Specialist</label>
            </div>
            <div class="level-holder">
-            &nbsp;
             <center><div class="my-bullet-ex"></div></center>
-             <label class="ex-level">Expert</label>
+             <label class="ex-level">&nbsp;&nbsp;Expert</label>
            </div>
         </div>
 
