Completed adding new framework design

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 
 
  <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
- <!-- <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 <script type="text/javascript" src="scripts/my-web-dan.js"></script>
 <script type="text/javascript" src="scripts/scroll.js"></script>
 </body>
