Add and fixed more cert button

--- a/test.html
+++ b/test.html
@@ -79,5 +79,6 @@
  <script type="text/javascript">
    $('.block').smoove({offset: '20%'});
  </script>
+ <script type="text/javascript" src="scripts/test.js"></script>
 </body>
 </html>
