Add and fixed more cert button

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
            <li>Branching and merging</li>
            <li>Rebase</li>
          </ol>
-         <a href="https://coursera.org/share/74f5719ced1a022423ad28539d5c1f67">View certificate</a>
+         <a href="https://coursera.org/share/74f5719ced1a022423ad28539d5c1f67" target="_blank">View certificate</a>
        </p>
     </div>
      <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
@@ -459,7 +459,7 @@
         (ii) project planning and scheduling<br> 
         (iii) project monitoring and control <br>
         (iv) project termination<br>
-        <a href="https://coursera.org/share/2b06d4187e4806c92b9e51b1c5287e05">View certificate</a>
+        <a href="https://coursera.org/share/2b06d4187e4806c92b9e51b1c5287e05" target="_blank">View certificate</a>
        </p>
     </div>
     <div class="project school-holder div-top-margin-pink js-scroll slide-right">
@@ -472,7 +472,7 @@
          (ii) Configuring users<br>
          (iii) Hardening the server operating system <br>
          (iv) Server requirements <br>
-         <a href="https://coursera.org/share/543382f307cbc14d7f97e5e7b1663bb4">View certificate</a>
+         <a href="https://coursera.org/share/543382f307cbc14d7f97e5e7b1663bb4" target="_blank">View certificate</a>
        </p>
     </div>
 
@@ -489,7 +489,7 @@
         (ii) Javascript<br> 
         (iii) Css <br>
         (iv) Hosting<br>
-        <a href="https://coursera.org/share/a219176d97d2f60bfdadfaa0d63a38f0">View certificate</a>
+        <a href="https://coursera.org/share/a219176d97d2f60bfdadfaa0d63a38f0" target="_blank">View certificate</a>
        </p>
 
       <!--  hide and show more cert -->
@@ -507,7 +507,7 @@
         (ii) Switches, Potentiometers<br> 
         (iii) Building circuits<br>
         
-        <a href="https://coursera.org/share/cf5431f7febd61ae051d2112d1bdbdae">View certificate</a>
+        <a href="https://coursera.org/share/cf5431f7febd61ae051d2112d1bdbdae" target="_blank">View certificate</a>
        </p>
     </div>
     <div class="project school-holder div-top-margin-pink js-scroll slide-right">
@@ -519,7 +519,7 @@
          (i) Learn about issues in cloud computing and various realizations of service-oriented computing.  <br>
          (ii) Become aware of cyber security threats that organizations need to be aware of and learn about various defense mechanisms.<br>
          (iii) Discover the range of mobile technologies available to modern enterprises and how these can be used to create innovative business models. <br>
-         <a href="https://coursera.org/share/943196aa245452ce3e549265ade01799">View certificate</a>
+         <a href="https://coursera.org/share/943196aa245452ce3e549265ade01799" target="_blank">View certificate</a>
        </p>
     </div>
 
@@ -537,7 +537,7 @@
         (iii) PHP with MySQL (CRUD)<br>
         (iv) PHP form Validation<br>
         (v) PHP Authentication and session<br>
-        <a href="https://simpli-web.app.link/e/3k5OFP51bub">View certificate</a>
+        <a href="https://simpli-web.app.link/e/3k5OFP51bub" target="_blank">View certificate</a>
        </p>
     </div>
       
@@ -566,7 +566,7 @@
          (i) Learn about issues in cloud computing and various realizations of service-oriented computing.  <br>
          (ii) Become aware of cyber security threats that organizations need to be aware of and learn about various defense mechanisms.<br>
          (iii) Discover the range of mobile technologies available to modern enterprises and how these can be used to create innovative business models. <br>
-         <a href="https://coursera.org/share/943196aa245452ce3e549265ade01799">View certificate</a>
+         <a href="https://coursera.org/share/943196aa245452ce3e549265ade01799" target="_blank">View certificate</a>
        </p>
     </div> -->
 
