working on transcript generation FIXED LOWERR PRIMARY  trascript generation

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
    <div class="framework-container js-scroll slide-right">
     <h1 class="text-redish">Frameworks</h1>
       <div class="framework-rates">
-        <h3 class="sk-level-framework">Laravel</h3>
+        <!-- <h3 class="sk-level-framework">Laravel</h3> -->
+        <img src="images/laravel.png" width="120px">
         <div class="level-rail sk-level-rail">
           <div class="level-point sk-level-point">&nbsp;</div>
         </div><br>
@@ -142,8 +143,9 @@
       </div>
         <br>
       <div class="framework-rates">
-        <h3 class="sk-level-framework">Node.js</h3>
-        <div class="level-rail sk-level-rail">
+       <!--  <h3 class="sk-level-framework">Node.js</h3> --> 
+        <img src="images/node.png">
+       <div class="level-rail sk-level-rail">
           <div class="level-point sk-level-point">&nbsp;</div>
         </div><br>
         <div class="level-rate">
@@ -172,7 +174,8 @@
       </div>
       <br>
       <div class="framework-rates">
-        <h3 class="av-level-framework">Vue.js</h3>
+        <!-- <h3 class="av-level-framework">Vue.js</h3> -->
+        <img src="images/vuejs.png" width="120px">
         <div class="level-rail av-level-rail">
           <div class="level-point av-level-point">&nbsp;</div>
         </div><br>
