fixing show more certificate adding more certs to start a fresh on fun page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="index.html#projects">Projects</a></li>
         <li><a href="index.html#education">Education</a></li>
         <li><a href="index.html#myteam">Team</a></li>
-        <li><a href="fun.html">More</a></li>
+        <li><a href="#">More</a></li>
       </ul>
     </div>
   </nav>
@@ -560,18 +560,18 @@
         <a href="https://simpli-web.app.link/e/2a69gg11bub" target="_blank">View certificate</a>
        </p>
     </div>
-    <!-- <div class="project school-holder div-top-margin-pink js-scroll slide-right">
-      <h2>University of Mennesota</h2>
+     <div class="project school-holder div-top-margin-pink js-scroll slide-right">
+      <h2>Great Learning</h2>
       
        <p>
-         <b>IT Infrastructure and Emerging Trends</b><br>
-        Was able to explore the innovation that emerging technologies like Blockchains can bring about. <br>
-         (i) Learn about issues in cloud computing and various realizations of service-oriented computing.  <br>
-         (ii) Become aware of cyber security threats that organizations need to be aware of and learn about various defense mechanisms.<br>
-         (iii) Discover the range of mobile technologies available to modern enterprises and how these can be used to create innovative business models. <br>
-         <a href="https://coursera.org/share/943196aa245452ce3e549265ade01799" target="_blank">View certificate</a>
+         <b>Advanced SQL</b><br>
+        Was able to learn more on adavanced SQL queries including.
+        <ol>
+          <li>Sub-queries</li>
+        </ol> <br>
+         <a href="https://www.mygreatlearning.com/academy/courses/6811576/64939#?utm_source=share_with_friends" target="_blank">View certificate</a>
        </p>
-    </div> -->
+    </div> 
 
     </div>
  <button class="btnmorecert" onclick="MoreCert1()">See more certificates ...</button>
